// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Bar Component Search Side Bar Component with available metrics 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <SearchBar
    setSearch={[MockFunction]}
  >
    <div
      className="metrics-search-bar-input"
      data-test-subj="metricsSearch"
    >
      <EuiSearchBar
        box={
          Object {
            "incremental": true,
            "placeholder": "Search to filter Available Metrics",
          }
        }
        defaultQuery=""
        onChange={[Function]}
        query=""
      >
        <EuiFlexGroup
          alignItems="center"
          gutterSize="m"
          wrap={true}
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
          >
            <EuiFlexItem
              className="euiSearchBar__searchHolder"
              grow={true}
            >
              <div
                className="euiFlexItem euiSearchBar__searchHolder"
              >
                <EuiSearchBox
                  incremental={true}
                  isInvalid={false}
                  onSearch={[Function]}
                  placeholder="Search to filter Available Metrics"
                  query=""
                >
                  <EuiFieldSearch
                    aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
                    compressed={false}
                    defaultValue=""
                    fullWidth={true}
                    incremental={true}
                    inputRef={[Function]}
                    isClearable={true}
                    isInvalid={false}
                    isLoading={false}
                    onSearch={[Function]}
                    placeholder="Search to filter Available Metrics"
                  >
                    <EuiFormControlLayout
                      compressed={false}
                      fullWidth={true}
                      icon="search"
                      isLoading={false}
                    >
                      <div
                        className="euiFormControlLayout euiFormControlLayout--fullWidth"
                      >
                        <div
                          className="euiFormControlLayout__childrenWrapper"
                        >
                          <EuiValidatableControl
                            isInvalid={false}
                          >
                            <input
                              aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
                              className="euiFieldSearch euiFieldSearch--fullWidth"
                              defaultValue=""
                              onKeyUp={[Function]}
                              placeholder="Search to filter Available Metrics"
                              type="search"
                            />
                          </EuiValidatableControl>
                          <EuiFormControlLayoutIcons
                            compressed={false}
                            icon="search"
                            isLoading={false}
                          >
                            <div
                              className="euiFormControlLayoutIcons"
                            >
                              <EuiFormControlLayoutCustomIcon
                                size="m"
                                type="search"
                              >
                                <span
                                  className="euiFormControlLayoutCustomIcon"
                                >
                                  <EuiIcon
                                    aria-hidden="true"
                                    className="euiFormControlLayoutCustomIcon__icon"
                                    size="m"
                                    type="search"
                                  >
                                    <EuiIconSearch
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                      focusable="false"
                                      role="img"
                                      style={null}
                                    >
                                      <svg
                                        aria-hidden={true}
                                        className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                        focusable="false"
                                        height={16}
                                        role="img"
                                        style={null}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="m11.271 11.978 3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738Z"
                                        />
                                      </svg>
                                    </EuiIconSearch>
                                  </EuiIcon>
                                </span>
                              </EuiFormControlLayoutCustomIcon>
                            </div>
                          </EuiFormControlLayoutIcons>
                        </div>
                      </div>
                    </EuiFormControlLayout>
                  </EuiFieldSearch>
                </EuiSearchBox>
              </div>
            </EuiFlexItem>
          </div>
        </EuiFlexGroup>
      </EuiSearchBar>
    </div>
  </SearchBar>
</Provider>
`;

exports[`Search Bar Component Search Side Bar Component with no available metrics 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <SearchBar
    setSearch={[MockFunction]}
  >
    <div
      className="metrics-search-bar-input"
      data-test-subj="metricsSearch"
    >
      <EuiSearchBar
        box={
          Object {
            "incremental": true,
            "placeholder": "Search to filter Available Metrics",
          }
        }
        defaultQuery=""
        onChange={[Function]}
        query=""
      >
        <EuiFlexGroup
          alignItems="center"
          gutterSize="m"
          wrap={true}
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
          >
            <EuiFlexItem
              className="euiSearchBar__searchHolder"
              grow={true}
            >
              <div
                className="euiFlexItem euiSearchBar__searchHolder"
              >
                <EuiSearchBox
                  incremental={true}
                  isInvalid={false}
                  onSearch={[Function]}
                  placeholder="Search to filter Available Metrics"
                  query=""
                >
                  <EuiFieldSearch
                    aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
                    compressed={false}
                    defaultValue=""
                    fullWidth={true}
                    incremental={true}
                    inputRef={[Function]}
                    isClearable={true}
                    isInvalid={false}
                    isLoading={false}
                    onSearch={[Function]}
                    placeholder="Search to filter Available Metrics"
                  >
                    <EuiFormControlLayout
                      compressed={false}
                      fullWidth={true}
                      icon="search"
                      isLoading={false}
                    >
                      <div
                        className="euiFormControlLayout euiFormControlLayout--fullWidth"
                      >
                        <div
                          className="euiFormControlLayout__childrenWrapper"
                        >
                          <EuiValidatableControl
                            isInvalid={false}
                          >
                            <input
                              aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
                              className="euiFieldSearch euiFieldSearch--fullWidth"
                              defaultValue=""
                              onKeyUp={[Function]}
                              placeholder="Search to filter Available Metrics"
                              type="search"
                            />
                          </EuiValidatableControl>
                          <EuiFormControlLayoutIcons
                            compressed={false}
                            icon="search"
                            isLoading={false}
                          >
                            <div
                              className="euiFormControlLayoutIcons"
                            >
                              <EuiFormControlLayoutCustomIcon
                                size="m"
                                type="search"
                              >
                                <span
                                  className="euiFormControlLayoutCustomIcon"
                                >
                                  <EuiIcon
                                    aria-hidden="true"
                                    className="euiFormControlLayoutCustomIcon__icon"
                                    size="m"
                                    type="search"
                                  >
                                    <EuiIconBeaker
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                      focusable="false"
                                      role="img"
                                      style={null}
                                    >
                                      <svg
                                        aria-hidden={true}
                                        className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                        focusable="false"
                                        height={16}
                                        role="img"
                                        style={null}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                        />
                                      </svg>
                                    </EuiIconBeaker>
                                  </EuiIcon>
                                </span>
                              </EuiFormControlLayoutCustomIcon>
                            </div>
                          </EuiFormControlLayoutIcons>
                        </div>
                      </div>
                    </EuiFormControlLayout>
                  </EuiFieldSearch>
                </EuiSearchBox>
              </div>
            </EuiFlexItem>
          </div>
        </EuiFlexGroup>
      </EuiSearchBar>
    </div>
  </SearchBar>
</Provider>
`;
